@@ -1,3 +1,6 @@
+[CW42]
+* SyncProxyAndroid SDK: add PrerecordedSpeech enum; add GEN3_8-INCH to DisplayType enum; add AUDIO_AAC to FileType enum;
+
 [CW40]
 + SyncProxyAndroid SDK: add SEARCH value to ButtonName enum.
 + SetGlobalProperties dialog: add menuTitle, menuIcon, and keyboardProperties parameters.
